Added 28 new videos with matching titles - total 44 videos

--- a/public/index.html
+++ b/public/index.html
@@ -234,6 +234,34 @@
     <script>
         // Video Data
         const videoLinks = [
+            "https://www.empressleak.xyz/media/videos/tmb/7291/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7290/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7287/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7284/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7267/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7260/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7259/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7257/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7242/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7236/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7228/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7224/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7218/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7210/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7212/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7204/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7200/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7195/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7187/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7185/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7183/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7180/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7176/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7175/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7174/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7163/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7150/video.webm",
+            "https://www.empressleak.xyz/media/videos/tmb/7144/video.webm",
             "https://www.empressleak.xyz/media/videos/tmb/7072/video.webm",
             "https://www.empressleak.xyz/media/videos/tmb/6995/video.webm",
             "https://www.empressleak.xyz/media/videos/tmb/6892/video.webm",
@@ -253,6 +281,34 @@
         ];
 
         const videoTitles = [
+            "Siri ya Usiku 🔥",
+            "Campus Girl Live",
+            "Msichana wa Kigamboni",
+            "Dada na Jirani",
+            "Mrembo wa Dar",
+            "Housemaid Caught",
+            "Mambo ya Sinza",
+            "Chenji Chenji",
+            "Binti Chuoni",
+            "Kijiwe Stories",
+            "Mtu na Mke Jirani",
+            "Akili Mbele",
+            "Mfanyakazi Gesti",
+            "Barza Scene",
+            "Mapenzi ya Fake 💔",
+            "Binti Maskini",
+            "Mama Ntilie",
+            "Starehe Usiku",
+            "Shemeji Tena",
+            "Keja Stories",
+            "Bibi Akiwa Nje",
+            "Chumbani Peke",
+            "Daktari na Patient",
+            "Taxi Driver",
+            "Night Shift",
+            "Ofisi Romance",
+            "Kesho Kutwa",
+            "Mchepuko Gesti",
             "Mke wa Mtu Gesti 🔥",
             "Mwanafunzi Chuo",
             "Mtoto wa Mchungaji",
